Add fortify